--- a/packages/system/cozystack-api/templates/apiservice.yaml
+++ b/packages/system/cozystack-api/templates/apiservice.yaml
@@ -11,3 +11,17 @@ spec:
     name: cozystack-api
     namespace: cozy-system
   version: v1alpha1
+---
+apiVersion: apiregistration.k8s.io/v1
+kind: APIService
+metadata:
+  name: v1alpha1.core.cozystack.io
+spec:
+  insecureSkipTLSVerify: true
+  group: core.cozystack.io
+  groupPriorityMinimum: 1000
+  versionPriority: 15
+  service:
+    name: cozystack-api
+    namespace: cozy-system
+  version: v1alpha1
