--- a/packages/apps/tenant/templates/tenant.yaml
+++ b/packages/apps/tenant/templates/tenant.yaml
@@ -39,6 +39,11 @@ rules:
   resources:
   - workloadmonitors
   verbs: ["get", "list", "watch"]
+- apiGroups:
+  - core.cozystack.io
+  resources:
+  - tenantsecrets
+  verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -188,6 +193,11 @@ rules:
     resources:
     - workloadmonitors
     verbs: ["get", "list", "watch"]
+  - apiGroups:
+    - core.cozystack.io
+    resources:
+    - tenantsecrets
+    verbs: ["get", "list", "watch"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -279,6 +289,11 @@ rules:
     resources:
     - workloadmonitors
     verbs: ["get", "list", "watch"]
+  - apiGroups:
+    - core.cozystack.io
+    resources:
+    - tenantsecrets
+    verbs: ["get", "list", "watch"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -345,6 +360,11 @@ rules:
     - cozystack.io
     resources:
     - workloadmonitors
+    verbs: ["get", "list", "watch"]
+  - apiGroups:
+    - core.cozystack.io
+    resources:
+    - tenantsecrets
     verbs: ["get", "list", "watch"]
 ---
 kind: RoleBinding
