--- a/packages/system/cozystack-api/values.yaml
+++ b/packages/system/cozystack-api/values.yaml
@@ -1,2 +1,2 @@
 cozystackAPI:
-  image: ghcr.io/cozystack/cozystack/cozystack-api:v0.35.0-beta.1@sha256:3f3d41e8844775e2e3609e8168afc79a014beee72647bd23c257bd02dc3443ef
+  image: ghcr.io/cozystack/cozystack/cozystack-api:latest@sha256:be5e75edbd6837c70f7b6931ff3776a60add2b5a19d7a728b535522d3568a045
