--- a/packages/apps/kubernetes/values.yaml
+++ b/packages/apps/kubernetes/values.yaml
@@ -10,7 +10,6 @@ version: "v1.32"
 host: ""
 
 ## @param nodeGroups {map[string]node} Worker nodes configuration
-## @field nodeGroups.md0 {object} Default node configuration
 ## @field node {node} Node configuration
 ## @field node.minReplicas {int} Minimum amount of replicas
 ## @field node.maxReplicas {int} Maximum amount of replicas
@@ -23,25 +22,25 @@ host: ""
 ## @field node.gpus {[]gpu} List of GPUs to attach (WARN: NVIDIA driver requires at least 4 GiB of RAM)
 ## @field gpu.name {string} Name of GPU, such as "nvidia.com/AD102GL_L40S"
 ##
-nodeGroups:
-  md0:
-    minReplicas: 0
-    maxReplicas: 10
-    instanceType: "u1.medium"
-    ephemeralStorage: 20Gi
-    roles:
-    - ingress-nginx
-
-    resources:
-      cpu: ""
-      memory: ""
-
-    ## List of GPUs to attach (WARN: NVIDIA driver requires at least 4 GiB of RAM)
-    ## e.g:
-    ## instanceType: "u1.xlarge"
-    ## gpus:
-    ## - name: nvidia.com/AD102GL_L40S
-    gpus: []
+#nodeGroups:
+#  md0:
+#    minReplicas: 0
+#    maxReplicas: 10
+#    instanceType: "u1.medium"
+#    ephemeralStorage: 20Gi
+#    roles:
+#    - ingress-nginx
+#
+#    resources:
+#      cpu: ""
+#      memory: ""
+#
+#    ## List of GPUs to attach (WARN: NVIDIA driver requires at least 4 GiB of RAM)
+#    ## e.g:
+#    ## instanceType: "u1.xlarge"
+#    ## gpus:
+#    ## - name: nvidia.com/AD102GL_L40S
+#    gpus: []
 
 
 ## @section Cluster Addons
