--- a/packages/apps/nats/values.yaml
+++ b/packages/apps/nats/values.yaml
@@ -39,7 +39,7 @@ jetstream:
 
 ## @param config {config} NATS configuration
 config:
-  ## @field config.merge {*merge} Additional configuration to merge into NATS config (see example)
+  ## @field config.merge {*object} Additional configuration to merge into NATS config (see example)
   ## Allows you to customize NATS server settings by merging additional configurations.
   ## For example, you can add extra parameters, configure authentication, or set custom settings.
   ## Default: {}
@@ -67,7 +67,7 @@ config:
   ##   include ./my-config-last.conf;
   ## }
   merge: {}
-  ## @field config.resolver {resolver} Additional resolver configuration to merge into NATS config (see example)
+  ## @field config.resolver {*object} Additional resolver configuration to merge into NATS config (see example)
   ## Allows you to customize NATS server settings by merging resolver configurations.
   ## Default: {}
   ## Example: https://github.com/nats-io/k8s/blob/94414664c254b0bbac3a07fc9693f6c4f8f88709/helm/charts/nats/values.yaml#L248-L270
