--- a/packages/apps/vm-disk/values.yaml
+++ b/packages/apps/vm-disk/values.yaml
@@ -1,19 +1,20 @@
 ## @section Common parameters
 
 ## @param source {source} The source image location used to create a disk
-## @field source.image {*string} Use image by name: uploaded as "golden image" or from the list: `ubuntu`, `fedora`, `cirros`, `alpine`, and `talos`.
+## @field source.image {*uploadImage} Use image by name: uploaded as "golden image" or from the list: `ubuntu`, `fedora`, `cirros`, `alpine`, and `talos`.
+## @field uploadImage.name {string} Name of the image to use
 ## Example using golden image:
 ## source:
 ##   image:
 ##     name: ubuntu
 ##
-## @field source.upload {*string} Upload local image
+## @field source.upload {*emptyobject} Upload local image
 ## Example upload local image:
 ## source:
 ##   upload: {}
 ##
-## @field source.http {*string} Download image from an HTTP source
-## @field source.http.url {*string} URL to download the image
+## @field source.http {*uploadHTTP} Download image from an HTTP source
+## @field uploadHTTP.url {string} URL to download the image
 ## Example download image from http source:
 ## source:
 ##   http:
