--- a/packages/system/nats/charts/nats/values.yaml
+++ b/packages/system/nats/charts/nats/values.yaml
@@ -238,6 +238,7 @@ config:
     tls:
       # config.nats.tls must be enabled also
       # when enabled, monitoring port will use HTTPS with the options from config.nats.tls
+      # if promExporter is also enabled, consider setting promExporter.monitorDomain
       enabled: false
 
   profiling:
@@ -312,9 +313,13 @@ config:
 container:
   image:
     repository: nats
-    tag: 2.10.17-alpine
+    tag: 2.11.8-alpine
     pullPolicy:
     registry:
+    # if digest is provided, it overrides tag (example: "sha256:abcdef1234567890")
+    digest:
+    # if fullImageName is provided, it overrides registry, repository, tag, and digest
+    fullImageName:
 
   # container port options
   # must be enabled in the config section also
@@ -353,9 +358,11 @@ reloader:
   enabled: true
   image:
     repository: natsio/nats-server-config-reloader
-    tag: 0.15.0
+    tag: 0.19.1
     pullPolicy:
     registry:
+    digest:
+    fullImageName:
 
   # env var map, see nats.env for an example
   env: {}
@@ -363,7 +370,7 @@ reloader:
   # all nats container volume mounts with the following prefixes
   # will be mounted into the reloader container
   natsVolumeMountPrefixes:
-  - /etc/
+    - /etc/
 
   # merge or patch the container
   # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#container-v1-core
@@ -378,11 +385,16 @@ promExporter:
   enabled: false
   image:
     repository: natsio/prometheus-nats-exporter
-    tag: 0.15.0
+    tag: 0.17.3
     pullPolicy:
     registry:
+    digest:
+    fullImageName:
 
   port: 7777
+  # if config.monitor.tls.enabled is set to true, monitorDomain must be set to the common name
+  # or a SAN used in the tls certificate
+  monitorDomain: localhost
   # env var map, see nats.env for an example
   env: {}
 
@@ -398,12 +410,11 @@ promExporter:
     enabled: false
 
     # merge or patch the pod monitor
-    # https://prometheus-operator.dev/docs/operator/api/#monitoring.coreos.com/v1.PodMonitor
+    # https://prometheus-operator.dev/docs/api-reference/api/#monitoring.coreos.com/v1.PodMonitor
     merge: {}
     patch: []
     # defaults to "{{ include "nats.fullname" $ }}"
     name:
-
 
 ############################################################
 # service
@@ -511,7 +522,6 @@ serviceAccount:
   # defaults to "{{ include "nats.fullname" $ }}"
   name:
 
-
 ############################################################
 # natsBox
 #
@@ -564,9 +574,11 @@ natsBox:
   container:
     image:
       repository: natsio/nats-box
-      tag: 0.14.3
+      tag: 0.18.0
       pullPolicy:
       registry:
+      digest:
+      fullImageName:
 
     # env var map, see nats.env for an example
     env: {}
@@ -623,7 +635,6 @@ natsBox:
     patch: []
     # defaults to "{{ include "nats.fullname" $ }}-box"
     name:
-
 
 ################################################################################
 # Extra user-defined resources
