--- a/packages/apps/tenant/templates/quota.yaml
+++ b/packages/apps/tenant/templates/quota.yaml
@@ -7,4 +7,21 @@ metadata:
 spec:
   hard:
     {{- include "cozy-lib.resources.flatten" (list .Values.resourceQuotas $) | nindent 6 }}
+---
+apiVersion: v1
+kind: LimitRange
+metadata:
+  name: tenant-range-limits
+  namespace: {{ include "tenant.name" . }}
+spec:
+  limits:
+    - default:
+        cpu: "250m"
+        memory: "128Mi"
+        ephemeral-storage: "2Gi"
+      defaultRequest:
+        cpu: "25m"
+        memory: "128Mi"
+        ephemeral-storage: "50Mi"
+      type: Container
 {{- end }}
