--- a/packages/system/capi-providers-infraprovider/templates/providers.yaml
+++ b/packages/system/capi-providers-infraprovider/templates/providers.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.providers.kubevirt }}
+---
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
@@ -9,3 +11,18 @@ spec:
     selector:
       matchLabels:
         infraprovider-components: cozy
+{{- end }}
+{{- if .Values.providers.proxmox }}
+---
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
+kind: InfrastructureProvider
+metadata:
+  name: proxmox
+spec:
+  # https://github.com/ionos-cloud/cluster-api-provider-proxmox
+  version: v0.6.2-infraprovider
+  fetchConfig:
+    selector:
+      matchLabels:
+        infraprovider-components: cozy
+{{- end }}
