Fix proxmox-ve chart

--- a/packages/system/proxmox-ve/Chart.yaml
+++ b/packages/system/proxmox-ve/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
-name: proxmox-integration
+name: proxmox-ve
 description: A Helm chart for Proxmox VE integration with Kubernetes
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
-home: https://github.com/your-org/cozystack
+home: https://github.com/cozystack/cozystack
 sources:
-  - https://github.com/your-org/cozystack
+  - https://github.com/cozystack/cozystack
 maintainers:
   - name: CozyStack Team
     email: team@cozystack.io
