feature add possible configure alerta
Signed-off-by: kklinch0 <kklinch0@gmail.com>

--- a/packages/extra/monitoring/templates/alerta/alerta.yaml
+++ b/packages/extra/monitoring/templates/alerta/alerta.yaml
@@ -121,7 +121,9 @@ spec:
             - name: TELEGRAM_DISABLE_NOTIFICATION_SEVERITY
               value: "{{ .Values.alerta.alerts.telegram.disabledSeverity }}"
             {{- end }}
-
+          {{- with .Values.alerta.extraEnvs }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           ports:
             - name: http
               containerPort: 8080
