--- a/packages/system/dashboard-config/templates/Factory/service-details.yaml
+++ b/packages/system/dashboard-config/templates/Factory/service-details.yaml
@@ -118,13 +118,24 @@ spec:
                                   vertical: true
                                   gap: 8
                                 children:
-                                  {{ include "incloud-web-resources.factory.links.details" (dict
+                                  - type: antdText
+                                    data:
+                                      id: meta-name-label
+                                      text: Namespace
+                                      strong: true
+
+                                  {{ include "incloud-web-resources.icon" (dict
+                                      "text" "NS"
+                                      "title" "namespace"
+                                      "backgroundColor" "#a25792ff"
+                                    )| nindent 34
+                                  }}
+                                  {{ include "incloud-web-resources.factory.linkblock" (dict
                                       "reqIndex" 0
                                       "type" "namespace"
-                                      "title" "Namespace"
                                       "jsonPath" ".metadata.namespace"
                                       "factory" "namespace-details"
-                                    ) | nindent 34 
+                                    ) | nindent 38
                                   }}
 
                               # Labels
@@ -388,5 +399,6 @@ spec:
                       withoutControls: false
                       labelsSelectorFull:
                         reqIndex: 0
+                        # TODO требуется обработка нулевого значения
                         pathToLabels: ".spec.selector"
                       pathToItems: ".items"
